--- a/css/style.css
+++ b/css/style.css
@@ -92,3 +92,14 @@
     padding: 5px;
     text-decoration: none;
 }
+
+/* CREATE */
+#create-form,
+#edit-form {
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+#create-form div {
+    margin-bottom: 10px;
+}
